[package]
# Can't rename because of https://github.com/rust-lang/crates.io/issues/728
name = "cargo_yeet"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Yeet rust target directories."

[[bin]]
name = "cargo-yeet"

[dependencies]
clap = { version = "4", features = ["cargo"] }
fs_extra = "1"
